--- a/style.css
+++ b/style.css
@@ -1,41 +1,3 @@
-/* body{
-    background-color: whitesmoke;
-    color: black;
-    text-align: center;
-}
-h1{
-    text-align: center;
-}
-hr{
-    height: 0.5px;            
-    width: 90%;              
-    margin: 20px;       
-}
-#three{
-    text-align: center;
-}
-#one, #two, #three{
-    font-size: small;
-}
-form {
-    width: fit-content;
-    margin: 0 auto;
-}
-#city, #mosque{
-    font-family: sans-serif;
-}
-#row1{
-    font-size: smaller;
-}
-table{
-    margin: 0 auto;
-    border-spacing: 20px 5px;
-}
-table, th, td{
-    border: 1px solid #ccc;
-    border-collapse: collapse;
-} */
-/* Reset defaults */
 * {
   margin: 0;
   padding: 0;
@@ -110,7 +72,7 @@ input[type="email"]:focus {
 }
 
 button {
-  background-color: #0078d7;
+  background-color: goldenrod;
   color: white;
   border: none;
   padding: 12px 22px;
@@ -121,7 +83,7 @@ button {
 }
 
 button:hover {
-  background-color: #005fa3;
+  background-color: gold;
 }
 
 /* Second paragraph */
@@ -151,7 +113,7 @@ th, td {
 }
 
 th {
-  background-color: #0078d7;
+  background-color: goldenrod;
   color: white;
   text-align: center;
 }
