--- a/style.css
+++ b/style.css
@@ -1,12 +1,39 @@
 * {
+  background: rgb(255, 250, 243);
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 
+header h1{
+  margin-top: 40px;
+}
+
+nav{
+  gap: 200px;
+}
+
+nav {
+  display: flex;
+  justify-content: center; /* centers them horizontally */
+  gap: 60px; /* controls the spacing between links */
+}
+
+nav a {
+  text-decoration: none;
+  color: brown;
+  font-weight: bold;
+  font-size: 0.95rem;
+}
+
+nav a:hover{
+  color: lightsalmon;
+}
+
+
 body {
   font-family: "Poppins", Arial, sans-serif;
-  background: linear-gradient(135deg, #eaf4f9, #f8f9fc);
+  background: rgb(255, 250, 243);
   color: #333;
   display: flex;
   flex-direction: column;
@@ -18,7 +45,6 @@ body {
 /* Heading */
 h1 {
   text-align: center;
-  color: #2c3e50;
   font-size: 2.2rem;
   margin-bottom: 10px;
 }
@@ -63,11 +89,13 @@ input[type="email"] {
   border-radius: 8px;
   font-size: 1rem;
   transition: 0.2s;
+  background: white;
 }
 
 input[type="email"]:focus {
   border-color: #0078d7;
   outline: none;
+  background: white;
   box-shadow: 0 0 5px rgba(0,120,215,0.2);
 }
 
@@ -132,6 +160,42 @@ footer {
   padding: 15px 0;
 }
 
-footer strong {
-  color: #2c3e50;
+#three a{
+  color: brown;
+  text-decoration: none;
+}
+#three a:hover{
+  color: lightsalmon;
+  text-decoration: underline;
+}
+
+
+body.about *{
+  text-align: left;
+}
+
+body.about nav a{
+  color: brown;
+  font-weight:bolder
+} 
+body.about nav a:hover{
+  color: lightsalmon;
+} 
+body.about img{
+  display: block;
+  margin: 0 auto;
+  max-width: 60%;
+  height: auto;
+  border-radius: 20px;
+}
+body.about ul{
+  list-style: none;
+  list-style-position: inside;
+  text-align: left;
+  
+}ul li::before {
+  content: "» ";                         /* Custom bullet symbol */
+  font-family: "Courier New", monospace; /* Bullet font */
+  font-size: 20px;                       /* Bullet size */
+  color: black;                            /* Bullet color */
 }
